# 2024-11-election-analysis

./: README.md  pyproject.toml  state divergence.ipynb
data/: Pres_Pollist.xlsx  State_Topline.xlsx  Voteshare_Probabilities.xlsx
data/set_a/output/: ak_2020.csv  ak_2024.csv  al_2024.csv  az_2024.csv  ca_2024.csv  co_2020.csv  co_2024.csv  ct_2024.csv  de_2020.csv  de_2024.csv  fl_2020.csv  fl_2024.csv  ga_2024.csv  hi_2024.csv  ia_2024.csv  id_2020.csv  id_2024.csv  il_2024.csv  in_2020.csv  in_2024.csv  ks_2020.csv  ks_2024.csv  ky_2020.csv  ky_2024.csv  la_2020.csv  ma_2024.csv  md_2020.csv  md_2024.csv  me_2024.csv  mi_2024.csv  mn_2020.csv  mn_2024.csv  mo_2020.csv  mo_2024.csv  ms_2020.csv  mt_2020.csv  mt_2024.csv  nc_2020.csv  nc_2024.csv  nd_2020.csv  (+38 more)
data/set_b/output/: ak_2024.csv  al_2020.csv  ar_2020.csv  ar_2024.csv  az_2020.csv  az_2024.csv  ca_2020.csv  ca_2024.csv  co_2024.csv  ct_2020.csv  ct_2024.csv  fl_2024.csv  ga_2020.csv  ga_2024.csv  hi_2020.csv  hi_2024.csv  ia_2020.csv  ia_2024.csv  id_2024.csv  il_2020.csv  il_2024.csv  in_2024.csv  ks_2024.csv  ky_2024.csv  la_2024.csv  ma_2020.csv  ma_2024.csv  md_2024.csv  me_2020.csv  me_2024.csv  mi_2020.csv  mi_2024.csv  mn_2024.csv  ms_2024.csv  mt_2024.csv  nc_2024.csv  nd_2024.csv  ne_2024.csv  nh_2024.csv  nj_2024.csv  (+26 more)
src/election_silver/: __init__.py
