[project]
name = "election-silver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "xlsx2csv>=0.8.3",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "plotly>=5.24.1",
    "pyarrow>=18.0.0",
    "pandas>=2.2.3",
    "kaleido==0.2.1",
    "statsmodels>=0.14.4",
    "httpx>=0.27.2",
    "orjson>=3.10.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
